[tool.poetry]
name = "finalproject_morozov_m25-555"
version = "0.1.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = ["Vasilii Morozov <you@example.com>"]
readme = "README.md"

packages = [
    {include = "valutatrade_hub"}
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
prompt = "^0.4.1"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]   
project = "valutatrade_hub.cli.interface:cli"
wallet = "valutatrade_hub.cli.interface:cli"